# protomusiq

./: .gitignore  Cargo.toml  README.md
src/app/: .gitignore  Cargo.toml  deploy.sh
src/app/assets/: Musiqapp.desktop  install.sh
src/app/src/: main.rs
src/app/src/altmodes/: difflibs.rs  mod.rs
src/app/src/altmodes/background/: mod.rs
src/app/src/altmodes/backgroundclient/: mod.rs
src/app/src/altmodes/explore/: mod.rs
src/app/src/altmodes/proto/: mod.rs
src/app/src/altmodes/reconcile/: mod.rs
src/app/src/altmodes/repl/: mod.rs
src/app/src/altmodes/report/: mod.rs
src/app/src/altmodes/videoplayer/: mod.rs
src/app/src/backend/: mod.rs  playback.rs
src/app/src/datastore/: cache.rs  loader.rs  mod.rs  traits.rs
src/app/src/datastore/cached/: albumart.rs  mod.rs
src/app/src/datastore/jsonbacked/: albumart.rs  common.rs  impls.rs  mod.rs  movieart.rs  movielibrary.rs  playlists.rs  prehistory.rs  tracklibrary.rs
src/app/src/datastore/jsonbacked/tracker/: mod.rs  readonly.rs  readwrite.rs
src/app/src/datastore/localfs/: mod.rs
src/app/src/datastore/sqlitebacked/: impls.rs  mod.rs
src/app/src/datastore/sqlitebacked/concrete/: conn.rs  constants.rs  mod.rs  util.rs
src/app/src/datastore/sqlitebacked/concrete/bootstrap/: migrate.rs  mod.rs
src/app/src/datastore/sqlitebacked/concrete/dbmodel/: bridge.rs  library.rs  mod.rs  structs.rs
src/app/src/datastore/staticassets/: embedded.rs
src/app/src/gui/: compute.rs  impls.rs  init.rs  message.rs  mod.rs  subscription.rs  update.rs
src/app/src/gui/message/: impls.rs  mod.rs  nav.rs  top.rs
src/app/src/gui/state/: mod.rs  page.rs  state.rs
src/app/src/gui/update/: action.rs  common.rs  external.rs  loaded.rs  loading.rs  mod.rs  mpris.rs  nav.rs  navrel.rs  playback.rs  setup.rs  sink.rs  spawner.rs  volume.rs
src/app/src/gui/view/: common.rs  components.rs  consts.rs  elements.rs  mod.rs  render.rs  style.rs
src/app/src/gui/view/components/: links.rs  mod.rs  pagified.rs  thumbnail.rs
src/app/src/gui/view/page/: consts.rs  mod.rs  page.rs
src/app/src/gui/view/page/pages/: albums.rs  (+40 more)
src/app/src/logging/: mod.rs
src/app/src/model/: app.rs  augmented.rs  common.rs  constants.rs  functions.rs  library.rs  mod.rs  musicbrainzlib.rs  playlist.rs  sortkeys.rs  sorts.rs  videolibrary.rs
src/app/src/model/gamelibrary/: consoles.rs  images.rs  mod.rs  nameutil.rs
src/app/src/services/: mod.rs
src/app/src/services/mpris/: backend.rs  mod.rs
src/app/src/services/sink/: backend.rs  mod.rs  remotebridge.rs  remotehandler.rs
src/app/src/services/tracker/: mod.rs
src/app/src/shared/: client.rs  messages.rs  mod.rs  state.rs
src/app/src/util/: mod.rs  shuffle.rs
src/app/src/util/config/: mod.rs
src/app/src/util/logging/: mod.rs
src/tui/: Cargo.toml
src/tui/src/: main.rs
src/webserver/: Cargo.toml
src/webserver/src/: contenttype.rs  ds.rs  main.rs  model.rs
src/webserver/src/routes/: mod.rs  nonhtml.rs
src/webserver/src/routes/html/: elements.rs  mod.rs  pages.rs  wrapper.rs
src/webserver/static/: main.js  sticky_stylesheet.css  stylesheet.css  testing.html
(+154 files in other folders)
