[package]
name = "musiqapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

iced = { version = "0.9", features = ["image"] }
iced_native = "0.10"

once_cell = "1.17"

image = "0.24"

rusqlite = { version = "0.28", features = ["bundled", "chrono", "blob"] }

chrono = { version = "0.4", features = ["serde"] }

rodio = "0.16"
mpris-player = "0.6"
glib = "0.14"

tiny_http = "0.11"

musiqlibrary = {path = "../library"}
