[package]
name = "musiqapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

iced = { version = "0.12", features = ["image"] }

once_cell = "1.19"

threadpool = "1.8"

image = "0.25"

rusqlite = { version = "0.31", features = ["bundled", "chrono", "blob"] }

chrono = { version = "0.4", features = ["serde"] }

rodio = "0.17"
mpris-player = "0.6"
glib = "0.17"

tiny_http = "0.12"
ureq = "2.9"

musiqcore = {path = "../core"}
musiqlibrary = {path = "../library"}
musicbrainz = {path = "../musicbrainz"}
