[package]
name = "musiqtui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#iced = { version = "0.3", features = ["image"] }
#iced_futures = "0.3"

#image = "0.23"

chrono = { version = "0.4", features = ["serde"] }

rodio = "0.14"
mpris-player = "0.6"
glib = "0.14"

hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
tokio = { version = "1.17", features = ["full"] }

musiqlibrary = {path = "../library"}
