[package]
name = "musiqwebserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musiqlibrary = {path = "../library"}
hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
tokio = { version = "1.12", features = ["full"] }
